--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ body{
 	padding: 0;
 	font-size: 16px;
 	font-family: 'Open Sans', sans-serif;
-	color: #263238;
+	color: white;
 	background:#C2C2C2;
 	display: flex;
 	flex-direction: column;
@@ -21,9 +21,10 @@ header {
 	height:300px;
 	width:100%;
 	position: relative;
-	border-bottom-left-radius:150px;
+	border-bottom-left-radius:100px;
 	margin-bottom:-150px;
 	z-index: 4;
+	color: black;
 }
 
 header h1 {
@@ -35,13 +36,15 @@ header h1 {
 	justify-content: space-between;
 	margin: 0 50px;
 	font-size: 30px;
+	position: relative;
+	top:20px;
 }
 
 aside {
-	height: 500px;
+	height: 400px;
 	width:100%;
 	padding-top: 150px;
-	border-bottom-left-radius:150px;
+	border-bottom-left-radius:100px;
 	background: rgb(17,224,71);
 	background: linear-gradient(142deg, rgba(17,224,71,1) 0%, rgba(19,170,200,1) 41%, rgba(6,184,219,1) 79%);
 	margin-bottom:-150px;
@@ -50,8 +53,25 @@ aside {
 
 input {
 	position: relative;
-	top:50px;
 	margin-left: 5%;
+	border: none;
+	background-color: transparent;
+	color: white;
+}
+
+::placeholder {
+	color:white;
+}
+
+.line {
+	background-color: white;
+	height:2px;
+	position: absolute;
+	margin-left: 5%;
+}
+
+.l1 {
+	width:60%;
 }
 
 .cardnr {
@@ -63,13 +83,47 @@ input {
 	margin-right: 5%;
 }
 
+.name {
+	width:50%;
+}
 
+.cvc {
+	width: 10%;
+	margin-right: 5%;
+	margin-left:15%;
+}
+
+.form {
+	margin-top: 50px
+}
 
 main {
-	height:500px;
+	height:400px;
 	position: relative;
 	background: black;
 	padding-top: 150px;
 	z-index:-1;
 	flex-grow: 2;
+	width:100%;
+	border-bottom-left-radius:100px;
+	margin-bottom:-150px;
+}
+
+.product {
+	margin-left: 5%;
+	width:100%;
+	justify-content: space-between;
+}
+
+.margin {
+	position: relative;
+	margin-right: 10%;
+}
+
+footer {
+	background:#6643d1;
+	padding-top: 150px;
+	z-index: -2;
+	bottom:0;
+	position: relative;
 }
