--- a/style.css
+++ b/style.css
@@ -4,12 +4,12 @@
 body{
 	margin:0;
 	padding: 0;
-	font-size: 16px;
 	font-family: 'Open Sans', sans-serif;
 	color: white;
 	background:#C2C2C2;
 	display: flex;
 	flex-direction: column;
+
 }
 
 .flex {
@@ -18,7 +18,7 @@ body{
 
 header {
 	background:white;
-	height:300px;
+	height:200px;
 	width:100%;
 	position: relative;
 	border-bottom-left-radius:100px;
@@ -70,8 +70,26 @@ input {
 	margin-left: 5%;
 }
 
+.joon {
+
+}
+
 .l1 {
 	width:60%;
+}
+
+.l2{
+	width:20%;
+	right:10%;
+}
+
+.l3 {
+	width:50%;
+}
+
+.l4 {
+	width:10%;
+	right:20%;
 }
 
 .cardnr {
@@ -98,12 +116,11 @@ input {
 }
 
 main {
-	height:400px;
+	height:500px;
 	position: relative;
 	background: black;
 	padding-top: 150px;
 	z-index:-1;
-	flex-grow: 2;
 	width:100%;
 	border-bottom-left-radius:100px;
 	margin-bottom:-150px;
@@ -113,6 +130,11 @@ main {
 	margin-left: 5%;
 	width:100%;
 	justify-content: space-between;
+}
+
+.l5 {
+	width:90%;
+
 }
 
 .margin {
@@ -126,4 +148,6 @@ footer {
 	z-index: -2;
 	bottom:0;
 	position: relative;
+	width:100%;
 }
+
