--- a/style.css
+++ b/style.css
@@ -9,16 +9,17 @@ body{
 	background:#C2C2C2;
 	display: flex;
 	flex-direction: column;
-
+	height: 100vh;
 }
 
 .flex {
 	display: flex;
 }
 
-header {
+.header {
 	background:white;
 	height:200px;
+	min-height: 200px;
 	width:100%;
 	position: relative;
 	border-bottom-left-radius:100px;
@@ -27,7 +28,7 @@ header {
 	color: black;
 }
 
-header h1 {
+.header h1 {
 	left: 70px;
     position: absolute;
 }
@@ -40,7 +41,7 @@ header h1 {
 	top:20px;
 }
 
-aside {
+.aside {
 	height: 400px;
 	width:100%;
 	padding-top: 150px;
@@ -49,6 +50,7 @@ aside {
 	background: linear-gradient(142deg, rgba(17,224,71,1) 0%, rgba(19,170,200,1) 41%, rgba(6,184,219,1) 79%);
 	margin-bottom:-150px;
 	z-index: 3;
+	min-height:400px;
 }
 
 input {
@@ -115,8 +117,8 @@ input {
 	margin-top: 50px
 }
 
-main {
-	height:500px;
+.main {
+	height:550px;
 	position: relative;
 	background: black;
 	padding-top: 150px;
@@ -142,12 +144,30 @@ main {
 	margin-right: 10%;
 }
 
-footer {
+.footer {
 	background:#6643d1;
 	padding-top: 150px;
 	z-index: -2;
-	bottom:0;
 	position: relative;
 	width:100%;
+	height:250px;
+	display: flex;
+	justify-content: space-between;
 }
 
+
+.yeet {
+	position: relative;
+	left:45%;
+	display: flex;
+	justify-content: space-between;
+	width:50%;
+}
+
+.yeet h3 {
+	position: relative;
+	right:5%;
+}
+body > .main {
+ flex:1;
+}
